--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -476,9 +476,6 @@ video {
 .relative {
   position: relative;
 }
-.-left-16 {
-  left: -4rem;
-}
 .-left-96 {
   left: -24rem;
 }
@@ -487,9 +484,6 @@ video {
 }
 .-right-64 {
   right: -16rem;
-}
-.-top-24 {
-  top: -6rem;
 }
 .-top-28 {
   top: -7rem;
@@ -512,23 +506,20 @@ video {
 .top-16 {
   top: 4rem;
 }
-.-right-16 {
-  right: -4rem;
+.top-7 {
+  top: 1.75rem;
+}
+.-z-10 {
+  z-index: -10;
+}
+.-z-20 {
+  z-index: -20;
 }
 .z-0 {
   z-index: 0;
 }
 .z-50 {
   z-index: 50;
-}
-.-z-20 {
-  z-index: -20;
-}
-.-z-10 {
-  z-index: -10;
-}
-.z-10 {
-  z-index: 10;
 }
 .mx-auto {
   margin-left: auto;
@@ -540,17 +531,8 @@ video {
 .mb-10 {
   margin-bottom: 2.5rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.mb-16 {
-  margin-bottom: 4rem;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mb-20 {
-  margin-bottom: 5rem;
 }
 .mb-28 {
   margin-bottom: 7rem;
@@ -564,11 +546,20 @@ video {
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
 .mb-72 {
   margin-bottom: 18rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
+}
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 .mt-auto {
   margin-top: auto;
@@ -585,8 +576,17 @@ video {
 .grid {
   display: grid;
 }
-.h-12 {
-  height: 3rem;
+.hidden {
+  display: none;
+}
+.h-11 {
+  height: 2.75rem;
+}
+.h-3 {
+  height: 0.75rem;
+}
+.h-4 {
+  height: 1rem;
 }
 .h-64 {
   height: 16rem;
@@ -594,23 +594,26 @@ video {
 .h-72 {
   height: 18rem;
 }
-.h-96 {
-  height: 24rem;
+.h-full {
+  height: 100%;
 }
 .h-screen {
   height: 100vh;
 }
-.h-80 {
-  height: 20rem;
-}
-.w-12 {
-  width: 3rem;
+.w-11 {
+  width: 2.75rem;
 }
 .w-16 {
   width: 4rem;
 }
 .w-20 {
   width: 5rem;
+}
+.w-3 {
+  width: 0.75rem;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-64 {
   width: 16rem;
@@ -641,8 +644,8 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -662,23 +665,17 @@ video {
 .gap-4 {
   gap: 1rem;
 }
-.gap-8 {
-  gap: 2rem;
+.gap-6 {
+  gap: 1.5rem;
 }
 .overflow-hidden {
   overflow: hidden;
 }
-.overflow-y-auto {
-  overflow-y: auto;
-}
 .overflow-x-hidden {
   overflow-x: hidden;
 }
-.overflow-y-hidden {
-  overflow-y: hidden;
-}
-.overflow-y-scroll {
-  overflow-y: scroll;
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -727,11 +724,22 @@ video {
 .bg-contact-gradient {
   background-image: radial-gradient(62.5% 670.93% at 56.92% 62.5%, #351580 0%, #581C81 100%);
 }
+.bg-hero-bg {
+  background-image: linear-gradient(180deg, rgba(6, 3, 36, 0) 77.35%, rgba(5, 2, 28, 0.15) 77.35%, #05021C 100%);
+}
 .bg-cover {
   background-size: cover;
 }
-.p-5 {
-  padding: 1.25rem;
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -763,38 +771,26 @@ video {
 .pb-24 {
   padding-bottom: 6rem;
 }
-.pb-28 {
-  padding-bottom: 7rem;
-}
 .pb-3 {
   padding-bottom: 0.75rem;
 }
-.pb-52 {
-  padding-bottom: 13rem;
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
-.pb-8 {
-  padding-bottom: 2rem;
-}
-.pl-20 {
-  padding-left: 5rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 .pl-24 {
   padding-left: 6rem;
 }
-.pl-8 {
-  padding-left: 2rem;
+.pl-9 {
+  padding-left: 2.25rem;
 }
-.pr-12 {
-  padding-right: 3rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .pr-22 {
   padding-right: 90px;
-}
-.pt-10 {
-  padding-top: 2.5rem;
-}
-.pt-11 {
-  padding-top: 2.75rem;
 }
 .pt-16 {
   padding-top: 4rem;
@@ -811,12 +807,17 @@ video {
 .pt-3 {
   padding-top: 0.75rem;
 }
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pt-7 {
+  padding-top: 1.75rem;
+}
+.pt-8 {
+  padding-top: 2rem;
+}
 .text-center {
   text-align: center;
-}
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 .text-40 {
   font-size: 40px;
@@ -838,6 +839,10 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-extrabold {
   font-weight: 800;
 }
@@ -855,6 +860,9 @@ video {
 }
 .leading-6 {
   line-height: 1.5rem;
+}
+.leading-7 {
+  line-height: 1.75rem;
 }
 .text-ai-white-450 {
   color: rgba(255, 255, 255, 0.45);
@@ -897,11 +905,163 @@ video {
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
+@media (min-width: 768px) {
 
+  .md\:-top-24 {
+    top: -6rem;
+  }
 
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
 
-.btn{
-  background: linear-gradient(95.32deg, rgba(100, 30, 250, 0.37) 0%, rgba(239, 58, 255, 0.37) 114.79%),
-  linear-gradient(0deg, rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.27));
+  .md\:mb-12 {
+    margin-bottom: 3rem;
+  }
 
+  .md\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .md\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
+  }
+
+  .md\:h-4 {
+    height: 1rem;
+  }
+
+  .md\:h-5 {
+    height: 1.25rem;
+  }
+
+  .md\:w-12 {
+    width: 3rem;
+  }
+
+  .md\:w-4 {
+    width: 1rem;
+  }
+
+  .md\:w-5 {
+    width: 1.25rem;
+  }
+
+  .md\:max-w-md {
+    max-width: 28rem;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:pb-28 {
+    padding-bottom: 7rem;
+  }
+
+  .md\:pb-52 {
+    padding-bottom: 13rem;
+  }
+
+  .md\:pb-8 {
+    padding-bottom: 2rem;
+  }
+
+  .md\:pl-20 {
+    padding-left: 5rem;
+  }
+
+  .md\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .md\:pr-12 {
+    padding-right: 3rem;
+  }
+
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .md\:pt-11 {
+    padding-top: 2.75rem;
+  }
+
+  .md\:pt-16 {
+    padding-top: 4rem;
+  }
+
+  .md\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .md\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-40 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
+@media (min-width: 1024px) {
+
+  .lg\:overflow-visible {
+    overflow: visible;
+  }
+}
+
+
