--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -525,17 +525,17 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.-mt-64 {
-  margin-top: -16rem;
+.-mt-48 {
+  margin-top: -12rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 .mb-10 {
   margin-bottom: 2.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mb-28 {
-  margin-bottom: 7rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -573,11 +573,17 @@ video {
 .flex {
   display: flex;
 }
+.inline-flex {
+  display: inline-flex;
+}
 .grid {
   display: grid;
 }
 .hidden {
   display: none;
+}
+.h-0 {
+  height: 0px;
 }
 .h-11 {
   height: 2.75rem;
@@ -606,11 +612,11 @@ video {
 .w-16 {
   width: 4rem;
 }
-.w-20 {
-  width: 5rem;
-}
 .w-3 {
   width: 0.75rem;
+}
+.w-32 {
+  width: 8rem;
 }
 .w-4 {
   width: 1rem;
@@ -633,6 +639,9 @@ video {
 .max-w-md {
   max-width: 28rem;
 }
+.max-w-xs {
+  max-width: 20rem;
+}
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -647,9 +656,6 @@ video {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
 .flex-col {
   flex-direction: column;
 }
@@ -659,14 +665,29 @@ video {
 .justify-between {
   justify-content: space-between;
 }
+.\!gap-0 {
+  gap: 0px !important;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
 .gap-14 {
   gap: 3.5rem;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-4 {
   gap: 1rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-8 {
+  gap: 2rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -676,6 +697,9 @@ video {
 }
 .scroll-smooth {
   scroll-behavior: smooth;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -692,11 +716,17 @@ video {
 .border-4 {
   border-width: 4px;
 }
+.border-none {
+  border-style: none;
+}
 .border-ai-white-200 {
   border-color: rgba(255, 255, 255, 0.2);
 }
 .border-ai-white-300 {
   border-color: rgba(255, 255, 255, 0.3);
+}
+.border-ai-white-450 {
+  border-color: rgba(255, 255, 255, 0.45);
 }
 .bg-ai-blue-blur {
   background-color: rgba(36, 0, 255, 0.36);
@@ -707,6 +737,9 @@ video {
 }
 .bg-ai-pink-blur {
   background-color: rgba(219, 0, 255, 0.43);
+}
+.bg-ai-white-150 {
+  background-color: rgba(255, 255, 255, 0.15);
 }
 .bg-ai-white-40 {
   background-color: rgba(255, 255, 255, 0.04);
@@ -757,22 +790,27 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.\!pb-0 {
+  padding-bottom: 0px !important;
+}
+.\!pt-0 {
+  padding-top: 0px !important;
+}
 .pb-16 {
   padding-bottom: 4rem;
 }
-.pb-24 {
-  padding-bottom: 6rem;
-}
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.pb-40 {
+  padding-bottom: 10rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -780,8 +818,8 @@ video {
 .pb-6 {
   padding-bottom: 1.5rem;
 }
-.pl-24 {
-  padding-left: 6rem;
+.pl-3 {
+  padding-left: 0.75rem;
 }
 .pl-9 {
   padding-left: 2.25rem;
@@ -789,8 +827,11 @@ video {
 .pr-10 {
   padding-right: 2.5rem;
 }
-.pr-22 {
-  padding-right: 90px;
+.pr-3 {
+  padding-right: 0.75rem;
+}
+.pr-4 {
+  padding-right: 1rem;
 }
 .pt-16 {
   padding-top: 4rem;
@@ -807,6 +848,9 @@ video {
 .pt-3 {
   padding-top: 0.75rem;
 }
+.pt-5 {
+  padding-top: 1.25rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -818,10 +862,6 @@ video {
 }
 .text-center {
   text-align: center;
-}
-.text-40 {
-  font-size: 40px;
-  line-height: 48px;
 }
 .text-53 {
   font-size: 53px;
@@ -864,6 +904,9 @@ video {
 .leading-7 {
   line-height: 1.75rem;
 }
+.text-ai-custom-purple {
+  color: rgba(81, 27, 129, 1);
+}
 .text-ai-white-450 {
   color: rgba(255, 255, 255, 0.45);
 }
@@ -873,9 +916,6 @@ video {
 }
 .opacity-25 {
   opacity: 0.25;
-}
-.opacity-30 {
-  opacity: 0.3;
 }
 .opacity-50 {
   opacity: 0.5;
@@ -905,10 +945,30 @@ video {
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+.active\:opacity-60:active {
+  opacity: 0.6;
+}
 @media (min-width: 768px) {
 
   .md\:-top-24 {
     top: -6rem;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .md\:mb-10 {
@@ -923,8 +983,20 @@ video {
     margin-bottom: 4rem;
   }
 
+  .md\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
   .md\:mb-20 {
     margin-bottom: 5rem;
+  }
+
+  .md\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
+  .md\:mb-4 {
+    margin-bottom: 1rem;
   }
 
   .md\:mb-5 {
@@ -955,8 +1027,16 @@ video {
     height: 1.25rem;
   }
 
+  .md\:h-auto {
+    height: auto;
+  }
+
   .md\:w-12 {
     width: 3rem;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
   }
 
   .md\:w-4 {
@@ -967,6 +1047,14 @@ video {
     width: 1.25rem;
   }
 
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
+  }
+
   .md\:max-w-md {
     max-width: 28rem;
   }
@@ -975,8 +1063,48 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .md\:gap-8 {
     gap: 2rem;
+  }
+
+  .md\:\!gap-5 {
+    gap: 1.25rem !important;
+  }
+
+  .md\:rounded-none {
+    border-radius: 0px;
+  }
+
+  .md\:border {
+    border-width: 1px;
+  }
+
+  .md\:border-none {
+    border-style: none;
+  }
+
+  .md\:border-ai-white-450 {
+    border-color: rgba(255, 255, 255, 0.45);
+  }
+
+  .md\:bg-transparent {
+    background-color: transparent;
   }
 
   .md\:p-5 {
@@ -986,6 +1114,19 @@ video {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:pb-16 {
+    padding-bottom: 4rem;
+  }
+
+  .md\:pb-24 {
+    padding-bottom: 6rem;
   }
 
   .md\:pb-28 {
@@ -1000,8 +1141,16 @@ video {
     padding-bottom: 2rem;
   }
 
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
   .md\:pl-20 {
     padding-left: 5rem;
+  }
+
+  .md\:pl-24 {
+    padding-left: 6rem;
   }
 
   .md\:pl-8 {
@@ -1010,6 +1159,14 @@ video {
 
   .md\:pr-12 {
     padding-right: 3rem;
+  }
+
+  .md\:pr-22 {
+    padding-right: 90px;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 
   .md\:pt-10 {
@@ -1028,8 +1185,16 @@ video {
     padding-top: 5rem;
   }
 
+  .md\:pt-24 {
+    padding-top: 6rem;
+  }
+
   .md\:pt-5 {
     padding-top: 1.25rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-3xl {
@@ -1055,6 +1220,14 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:opacity-25 {
+    opacity: 0.25;
+  }
+
+  .md\:opacity-30 {
+    opacity: 0.3;
   }
 }
 @media (min-width: 1024px) {
