--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -488,9 +488,6 @@ video {
 .-top-28 {
   top: -7rem;
 }
-.left-0 {
-  left: 0px;
-}
 .left-1\/2 {
   left: 50%;
 }
@@ -602,9 +599,6 @@ video {
 }
 .h-full {
   height: 100%;
-}
-.h-screen {
-  height: 100vh;
 }
 .w-11 {
   width: 2.75rem;
@@ -950,12 +944,25 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+
+
+canvas{
+  width: 100%;
+  height: auto;
+  border: 4px solid red;
+}
+
+
 .hover\:opacity-80:hover {
   opacity: 0.8;
 }
+
+
 .active\:opacity-60:active {
   opacity: 0.6;
 }
+
+
 @media (min-width: 768px) {
 
   .md\:-top-24 {
@@ -1075,16 +1082,12 @@ video {
     align-items: flex-start;
   }
 
-  .md\:gap-5 {
-    gap: 1.25rem;
+  .md\:\!gap-5 {
+    gap: 1.25rem !important;
   }
 
   .md\:gap-8 {
     gap: 2rem;
-  }
-
-  .md\:\!gap-5 {
-    gap: 1.25rem !important;
   }
 
   .md\:rounded-none {
@@ -1230,11 +1233,11 @@ video {
     opacity: 0.3;
   }
 }
+
+
 @media (min-width: 1024px) {
 
   .lg\:overflow-visible {
     overflow: visible;
   }
-}
-
-
+} 
