--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -537,11 +537,11 @@ video {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
+.mb-36 {
+  margin-bottom: 9rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
-}
-.mb-5 {
-  margin-bottom: 1.25rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -549,17 +549,20 @@ video {
 .mb-7 {
   margin-bottom: 1.75rem;
 }
-.mb-72 {
-  margin-bottom: 18rem;
-}
 .mb-8 {
   margin-bottom: 2rem;
 }
 .mb-9 {
   margin-bottom: 2.25rem;
 }
+.ml-auto {
+  margin-left: auto;
+}
 .mt-auto {
   margin-top: auto;
+}
+.ml-6 {
+  margin-left: 1.5rem;
 }
 .block {
   display: block;
@@ -591,9 +594,6 @@ video {
 .h-4 {
   height: 1rem;
 }
-.h-64 {
-  height: 16rem;
-}
 .h-72 {
   height: 18rem;
 }
@@ -603,9 +603,6 @@ video {
 .w-11 {
   width: 2.75rem;
 }
-.w-16 {
-  width: 4rem;
-}
 .w-3 {
   width: 0.75rem;
 }
@@ -614,9 +611,6 @@ video {
 }
 .w-4 {
   width: 1rem;
-}
-.w-64 {
-  width: 16rem;
 }
 .w-72 {
   width: 18rem;
@@ -707,9 +701,6 @@ video {
 .border {
   border-width: 1px;
 }
-.border-4 {
-  border-width: 4px;
-}
 .border-none {
   border-style: none;
 }
@@ -794,6 +785,9 @@ video {
 .\!pt-0 {
   padding-top: 0px !important;
 }
+.pb-0 {
+  padding-bottom: 0px;
+}
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -836,9 +830,6 @@ video {
 .pt-20 {
   padding-top: 5rem;
 }
-.pt-24 {
-  padding-top: 6rem;
-}
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -854,12 +845,15 @@ video {
 .pt-8 {
   padding-top: 2rem;
 }
+.text-left {
+  text-align: left;
+}
 .text-center {
   text-align: center;
 }
-.text-53 {
-  font-size: 53px;
-  line-height: 60px;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-base {
   font-size: 1rem;
@@ -877,8 +871,8 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.font-extrabold {
-  font-weight: 800;
+.font-light {
+  font-weight: 300;
 }
 .font-medium {
   font-weight: 500;
@@ -1018,6 +1012,10 @@ canvas{
     display: block;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -1040,6 +1038,10 @@ canvas{
 
   .md\:w-12 {
     width: 3rem;
+  }
+
+  .md\:w-16 {
+    width: 4rem;
   }
 
   .md\:w-20 {
@@ -1080,6 +1082,10 @@ canvas{
 
   .md\:items-start {
     align-items: flex-start;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:\!gap-5 {
@@ -1138,6 +1144,10 @@ canvas{
 
   .md\:pb-52 {
     padding-bottom: 13rem;
+  }
+
+  .md\:pb-72 {
+    padding-bottom: 18rem;
   }
 
   .md\:pb-8 {
@@ -1200,6 +1210,10 @@ canvas{
     text-align: left;
   }
 
+  .md\:text-center {
+    text-align: center;
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1208,6 +1222,11 @@ canvas{
   .md\:text-40 {
     font-size: 40px;
     line-height: 48px;
+  }
+
+  .md\:text-53 {
+    font-size: 53px;
+    line-height: 60px;
   }
 
   .md\:text-base {
@@ -1223,6 +1242,14 @@ canvas{
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:font-extrabold {
+    font-weight: 800;
+  }
+
+  .md\:font-semibold {
+    font-weight: 600;
   }
 
   .md\:opacity-25 {
