--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1008,6 +1008,10 @@ canvas{
     margin-bottom: 2rem;
   }
 
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
   .md\:block {
     display: block;
   }
